<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".movieupdate.MovieUpdateFragment">

    <data>

        <variable
            name="movieUpdateViewModel"
            type="com.github.sebastianaldi17.meeting10_movietracker.movieupdate.MovieUpdateViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/update_a_movie"
            android:textAlignment="center"
            android:textSize="@dimen/headerTextSize" />

        <EditText
            android:id="@+id/movie_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_key_no_html"
            android:inputType="number" />

        <EditText
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/movie_name_no_html"
            android:inputType="text" />

        <EditText
            android:id="@+id/movie_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/review"
            android:inputType="text" />

        <RatingBar
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:numStars="5"
            android:stepSize="1.0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{(view) -> movieUpdateViewModel.onUpdateMovie(movieKey, movieName, movieReview, movieRating)}"
            android:text="@string/add_a_movie" />

    </LinearLayout>

</layout>